# next-gen-algo-trading-bot

./: README.md  __init__.py  config.yaml  docker-compose.yml  pyproject.toml  sample_env
bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
brokers/: __init__.py  kite_trade.py  utils.py  zerodha.py
cli/: __init__.py  main.py
config/: __init__.py  config.yaml  sample_config.yaml  settings.py
core/: __init__.py  aggregator.py  base.py  engine.py  indicator_generator_worker.py  timeframe_generator_worker.py
dashboard/: __init__.py  dash_app.py  visualize.py
data/: aggregator_256265.parquet
feeds/: __init__.py  zerodha_ws.py
storage/: __init__.py  parquet.py  redis_client.py
strategies/: __init__.py  supertrend_rsi.py
tests/: test_indicator_generator.py
tradingview_dashboard/backend/: main.py  pyproject.toml
tradingview_dashboard/backend/backend.egg-info/: PKG-INFO  requires.txt
tradingview_dashboard/frontend/: package-lock.json  package.json  vite.config.js
tradingview_dashboard/frontend/src/: App.vue
tradingview_dashboard/frontend/src/components/: TradingViewChart.vue
